[package]
name = "vulkan_experiments"
version = "0.1.0"
authors = ["Bradley Lyman <lyman.brad3211@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexi_logger = "0.17.1"
log = "0.4.13"
vulkano = "*"
vulkano-shaders = "0.20.0"
vulkano-win = "0.20.0"
winit = "0.24.0"
